--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
 		"email": "sindresorhus@gmail.com",
 		"url": "https://sindresorhus.com"
 	},
+	"type": "module",
 	"bin": {
-		"anybar": "cli.js",
-		"anybar-exit": "anybar-exit.sh"
+		"anybar": "./cli.js",
+		"anybar-exit": "./anybar-exit.sh"
 	},
 	"engines": {
-		"node": ">=4"
+		"node": ">=12"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -29,7 +30,6 @@
 		"anybar",
 		"app",
 		"macos",
-		"osx",
 		"mac",
 		"udp",
 		"status",
@@ -38,12 +38,12 @@
 		"indicator"
 	],
 	"dependencies": {
-		"anybar": "^3.0.0",
-		"meow": "^3.7.0"
+		"anybar": "^5.0.0",
+		"meow": "^9.0.0"
 	},
 	"devDependencies": {
-		"ava": "*",
-		"execa": "^0.6.3",
-		"xo": "*"
+		"ava": "^3.15.0",
+		"execa": "^5.0.0",
+		"xo": "^0.39.1"
 	}
 }
